@@ -6,6 +6,10 @@
 	  has played the SFX once, and delete itself afterwards, fixing a leak on a
 	  sound effect played with the avatar as the SFX's source.
 	* all: Eliminated some warnings.
+	Rev 7292
+	* objs/animate.cc,usecode/intrinsics.cc: Fixed bug #3601382 "Open book sound
+	  happens when closing book" by forcing sounds played from usecode to begin
+	  playing right away. Eliminated some warnings.
 
 2013-01-17	Malignant Manor <malignantmanor@users.sourceforge.net>
 	* Fix crash when a party member dies due to a trap
